# AltComparison

./: CMakeLists.txt  jsonWriter.cpp  jsonWriter.h  main.cpp
gui/: CentralWidget.cpp  CentralWidget.h  CollapsibleTableModel.cpp  CollapsibleTableModel.h  TreeModel.cpp  TreeModel.h
include/: libAltBranches.h
libAltBranches/: CMakeLists.txt  libAltBranches.cpp  libAltBranches.h
structs/: comparedBranches.h
utils/: utils.h
